# jolt-zkguard

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
examples/: README.md  prover.rs
guest/: Cargo.toml
guest/src/: lib.rs  main.rs  policy_engine.rs
src/: main.rs
