[package]
name = "jolt-zkguard"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "guest"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
dotenv = "0.15"
rs_merkle = "1.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

jolt-sdk = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }

zkguard-core = { path = "core" }
guest = { package = "zkguard-guest", path = "guest" }
