[package]
name = "jolt-zkguard"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core", "guest"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rs_merkle = "1.3"
serde_json = "1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

jolt-sdk = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["host"] }

zkguard-core = { path = "core" }
guest = { package = "zkguard-guest", path = "guest" }

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
