[package]
name = "zkguard-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
bincode = "1.3"
rs_merkle = "1.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
alloy-primitives = "1.0.0"
alloy-sol-types = "1.0.0"
