[package]
name = "zkguard-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
bincode = "1.3"
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
zkguard-core = { path = "../core" }
